--- a/moodle/Info.plist
+++ b/moodle/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>Enter Today&apos;s Data</string>
+					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
